--- a/Tests.BolgerUtils.Framework.Razor/Templates/_Test.cshtml
+++ b/Tests.BolgerUtils.Framework.Razor/Templates/_Test.cshtml
@@ -17,7 +17,7 @@
             @if(Model.IsDisplayed) {
                 <ul>
                     @for(var i = 0; i < Model.LoopCount; i++) {
-                        <li>@if(Model.IsRawString) { @Model.Text.ToRawString() } else { @Model.Text }</li>
+                        <li>@if(Model.ShouldOutputRawString) { @Model.Text.ToRawString() } else { @Model.Text }</li>
                     }
                 </ul>
             }
